--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.25.5
   google_fonts:
   firebase_auth: ^4.17.6
+  cloud_firestore: ^4.15.8
  
 
 dev_dependencies:
